# webscrapper

./: README.md  pyproject.toml
webscrapper/: test_input.json  webscrapper.py
