[tool.poetry]
name = "webscrapper"
version = "0.1.0"
description = ""
authors = ["walker.a.phillips@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^1.5.3"
beautifulsoup4 = "^4.11.2"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
